need to decide on frameworks

--- a/server/frontend/index.html
+++ b/server/frontend/index.html
@@ -15,6 +15,18 @@
     <script src="objects.js"></script>
     <script src="functions.js"></script>
     <script src="casino.js"></script>
-    
+    <script src="p5.min.js"></script> 
+    <script>
+        function setup() {
+            createCanvas(400, 400);
+        }
+
+        function draw() {
+            background(0);
+        }
+    </script>   
+
+
+
 </body>
 </html>
